--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ edition = "2021"
 chrono = "0.4"
 anyhow = "1.0"
 rand = "0.8.5"
+skiplist = "0.4.0"
+bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
+tempdir = "0.3.7"
