--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ chrono = "0.4"
 anyhow = "1.0"
 rand = "0.8.5"
 skiplist = "0.4.0"
-bincode = "1.3.3"
+bincode = "2.0.0-rc.1"
 serde = { version = "1.0", features = ["derive"] }
 tempdir = "0.3.7"
