--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ bincode = "2.0.0-rc.1"
 serde = { version = "1.0", features = ["derive"] }
 tempdir = "0.3.7"
 growable-bloom-filter = "2.0"
+ouroboros = "0.15"
