--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
 channel = "nightly-2022-08-20"
-components = [ "rust-src", "rust-analyzer" ]
+# components = [ "rust-src", "rust-analyzer" ]
 profile = "default"
